--- a/app/src/main/res/layout/nearby_item_header.xml
+++ b/app/src/main/res/layout/nearby_item_header.xml
@@ -12,9 +12,9 @@
 
     <mastersunny.unitedclub.utils.CircleImageView
         android:id="@+id/place_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/profile_image" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@color/colorAccent" />
 
     <TextView
         android:id="@+id/place_name"
