city rooms added

--- a/app/src/main/res/layout/home_fragment_layout.xml
+++ b/app/src/main/res/layout/home_fragment_layout.xml
@@ -40,10 +40,48 @@
                         app:viewpagerAspectRatio="1.6" />
 
                     <android.support.v7.widget.RecyclerView
-                        android:id="@+id/popular_rv"
+                        android:id="@+id/nearby_rv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/autoViewPager"
+                        app:layout_scrollFlags="scroll|enterAlways" />
+
+                    <RelativeLayout
+                        android:id="@+id/recommended_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/nearby_rv"
+                        android:paddingBottom="@dimen/margin_5"
+                        android:paddingLeft="@dimen/margin_10"
+                        android:paddingRight="@dimen/margin_10"
+                        android:paddingTop="@dimen/margin_5">
+
+                        <TextView
+                            android:id="@+id/popular_stores"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:elevation="@dimen/margin_5"
+                            android:text="@string/recommended_text"
+                            android:textColor="#616161" />
+
+                        <TextView
+                            android:id="@+id/view_all_popular"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:elevation="@dimen/margin_5"
+                            android:text="View All"
+                            android:textColor="#006ff1"
+                            android:textSize="@dimen/text_size_13"
+                            android:visibility="gone" />
+                    </RelativeLayout>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recommended_rv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/recommended_layout"
                         app:layout_scrollFlags="scroll|enterAlways" />
 
                 </RelativeLayout>
