--- a/app/src/main/res/layout/home_fragment_layout2.xml
+++ b/app/src/main/res/layout/home_fragment_layout2.xml
@@ -75,7 +75,7 @@
         </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/popular_rv"
+            android:id="@+id/nearby_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/popular_layout"
