--- a/app/src/main/res/layout/activity_popular.xml
+++ b/app/src/main/res/layout/activity_popular.xml
@@ -21,7 +21,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/popular_rv"
+        android:id="@+id/nearby_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
