--- a/app/src/main/res/layout/content_home_fragment.xml
+++ b/app/src/main/res/layout/content_home_fragment.xml
@@ -6,55 +6,52 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/nearby_rv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/autoViewPager"
-            app:layout_scrollFlags="scroll|enterAlways" />
+            android:background="@color/white"
+            android:padding="10dp">
 
-        <RelativeLayout
-            android:id="@+id/recommended_layout"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/nearby_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nearby_rv"
-            android:paddingBottom="@dimen/margin_5"
-            android:paddingLeft="@dimen/margin_10"
-            android:paddingRight="@dimen/margin_10"
-            android:paddingTop="@dimen/margin_5">
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_10"
+            android:background="@color/white"
+            android:padding="10dp">
 
-            <TextView
-                android:id="@+id/popular_stores"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:elevation="@dimen/margin_5"
-                android:text="@string/recommended_text"
-                android:textColor="#616161" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recommended_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/view_all_popular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:elevation="@dimen/margin_5"
-                android:text="View All"
-                android:textColor="#006ff1"
-                android:textSize="@dimen/text_size_13"
-                android:visibility="gone" />
-        </RelativeLayout>
+        </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recommended_rv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/recommended_layout"
-            app:layout_scrollFlags="scroll|enterAlways" />
+            android:background="@color/white"
+            android:padding="10dp">
 
-    </RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/offer_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
