--- a/app/src/main/res/layout/recommended_item_layout.xml
+++ b/app/src/main/res/layout/recommended_item_layout.xml
@@ -4,6 +4,8 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/margin_8"
+    android:layout_marginRight="@dimen/margin_8"
     android:orientation="vertical">
 
     <ImageView
