home fragment changing

--- a/app/src/main/res/layout/nearby_item_header.xml
+++ b/app/src/main/res/layout/nearby_item_header.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/round_item_layout"
+    android:id="@+id/nearby_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -21,6 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_5"
-        android:text="Dhaka" />
+        android:text="@string/nearby_text" />
 
 </LinearLayout>
