--- a/app/src/main/res/layout/recommended_item_layout.xml
+++ b/app/src/main/res/layout/recommended_item_layout.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/deli_grocery_bg" />
+        android:src="@color/colorAccent" />
 
     <TextView
         android:layout_width="wrap_content"
