--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -7,9 +7,14 @@
         android:title="@string/nav_home" />
 
     <item
-        android:id="@+id/nav_bottom_stores"
+        android:id="@+id/nav_bottom_saved"
         android:icon="@drawable/ic_shop_normal"
-        android:title="@string/stores" />
+        android:title="@string/nav_saved" />
+
+    <item
+        android:id="@+id/nav_bottom_booking"
+        android:icon="@drawable/ic_shop_normal"
+        android:title="@string/nav_booking" />
 
     <item
         android:id="@+id/nav_bottom_profile"
