firebase realtiem database

--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -28,9 +28,9 @@
             android:padding="@dimen/margin_10">
 
             <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                app:srcCompat="@drawable/ic_home_black_24dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_home" />
 
             <TextView
                 android:id="@+id/home_text"
@@ -52,9 +52,9 @@
             android:padding="@dimen/margin_10">
 
             <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                app:srcCompat="@drawable/ic_person_black_24dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_saved" />
 
             <TextView
                 android:id="@+id/saved_text"
@@ -76,9 +76,9 @@
             android:padding="@dimen/margin_10">
 
             <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                app:srcCompat="@drawable/ic_person_black_24dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_booking" />
 
             <TextView
                 android:id="@+id/booking_text"
@@ -100,9 +100,9 @@
             android:padding="@dimen/margin_10">
 
             <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                app:srcCompat="@drawable/ic_person_black_24dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_avatar" />
 
             <TextView
                 android:id="@+id/profile_text"
