--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/nav_bottom_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home"
         android:title="@string/nav_home" />
 
     <item
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/nav_bottom_profile"
-        android:icon="@drawable/ic_person_black_24dp"
+        android:icon="@drawable/ic_avatar"
         android:title="@string/profile" />
 
 </menu>
