--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -42,7 +42,7 @@
                 android:textSize="@dimen/text_size_18" />
 
             <ImageView
-                android:id="@+id/search_button"
+                android:id="@+id/search_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
