--- a/app/src/main/res/layout/nearby_item_layout.xml
+++ b/app/src/main/res/layout/nearby_item_layout.xml
@@ -12,15 +12,19 @@
 
     <mastersunny.unitedclub.utils.CircleImageView
         android:id="@+id/place_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
         android:src="@drawable/profile_image" />
 
     <TextView
         android:id="@+id/place_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_5"
-        android:text="Dhaka" />
+        android:maxLines="1"
+        android:text="Dhaka"
+        android:textSize="@dimen/text_size_10" />
 
 </LinearLayout>
