--- a/app/src/main/res/layout/content_home_fragment.xml
+++ b/app/src/main/res/layout/content_home_fragment.xml
@@ -31,7 +31,15 @@
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_10"
             android:background="@color/white"
+            android:orientation="vertical"
             android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_5"
+                android:layout_marginLeft="@dimen/margin_5"
+                android:text="@string/popular_text" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recommended_rv"
