--- a/app/src/main/res/layout/recommended_item_layout.xml
+++ b/app/src/main/res/layout/recommended_item_layout.xml
@@ -1,29 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/margin_1"
+    android:layout_marginRight="@dimen/margin_1">
 
 
     <ImageView
-        android:layout_width="0dp"
+        android:layout_width="@dimen/popular_item_width"
         android:layout_height="210dp"
-        android:layout_marginLeft="32dp"
         android:scaleType="centerCrop"
-        android:src="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
+        android:src="@color/colorAccent" />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
