--- a/app/src/main/res/layout/nearby_item_layout.xml
+++ b/app/src/main/res/layout/nearby_item_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/round_item_layout"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
@@ -10,12 +10,12 @@
     android:paddingRight="10dp"
     android:paddingTop="@dimen/margin_5">
 
-    <mastersunny.unitedclub.utils.CircleImageView
+    <ImageView
         android:id="@+id/place_image"
-        android:layout_width="60dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:src="@drawable/profile_image" />
+        android:scaleType="centerCrop"
+        android:src="@color/colorPrimary" />
 
     <TextView
         android:id="@+id/place_name"
