--- a/app/src/main/res/layout/activity_date_room_select.xml
+++ b/app/src/main/res/layout/activity_date_room_select.xml
@@ -8,14 +8,12 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:fitsSystemWindows="true">
+        android:background="@color/white">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
-            android:layout_marginTop="@dimen/margin_20"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <LinearLayout
@@ -61,5 +59,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <Button
+        android:id="@+id/btn_apply_room_constraint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="32dp"
+        android:layout_marginLeft="@dimen/margin_20"
+        android:layout_marginRight="@dimen/margin_20"
+        android:background="@drawable/button_selector"
+        android:text="Apply"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/text_size_16"
+        android:visibility="visible" />
+
 
 </android.support.design.widget.CoordinatorLayout>
