--- a/app/src/main/res/layout/room_selection_layout.xml
+++ b/app/src/main/res/layout/room_selection_layout.xml
@@ -22,8 +22,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Room1"
-                android:textSize="@dimen/text_size_18"
+                android:text="Room"
+                android:textSize="@dimen/text_size_16"
                 android:textStyle="bold" />
 
             <TextView
