--- a/app/src/main/res/layout/activity_date_room_select.xml
+++ b/app/src/main/res/layout/activity_date_room_select.xml
@@ -69,7 +69,7 @@
         android:layout_marginLeft="@dimen/margin_20"
         android:layout_marginRight="@dimen/margin_20"
         android:background="@drawable/button_selector"
-        android:text="Apply"
+        android:text="Search"
         android:textColor="@android:color/white"
         android:textSize="@dimen/text_size_16"
         android:visibility="visible" />
