--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="@dimen/margin_5"
         android:gravity="center"
         android:orientation="horizontal"
-        android:weightSum="4">
+        android:weightSum="3">
 
         <LinearLayout
             android:id="@+id/home_layout"
@@ -49,7 +49,8 @@
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:padding="@dimen/margin_10">
+            android:padding="@dimen/margin_10"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="wrap_content"
