--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -46,6 +46,7 @@
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="@dimen/margin_20"
                 android:background="?selectableItemBackground"
+                android:visibility="gone"
                 app:srcCompat="@drawable/ic_search_normal" />
 
         </android.support.v7.widget.Toolbar>
@@ -137,7 +138,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/exam_rv"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
