--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -23,6 +23,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
+                android:id="@+id/room_image"
                 android:layout_width="match_parent"
                 android:layout_height="210dp"
                 android:layout_marginLeft="@dimen/margin_3"
