--- a/app/src/main/res/layout/login_fragment_layout.xml
+++ b/app/src/main/res/layout/login_fragment_layout.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/prescription_image"
+                android:id="@+id/university_image"
                 android:layout_width="match_parent"
                 android:layout_height="175dp"
                 android:layout_gravity="center"
